--- a/custom_components/matson_monitor/manifest.json
+++ b/custom_components/matson_monitor/manifest.json
@@ -4,13 +4,16 @@
   "codeowners": ["@scobber"],
   "config_flow": true,
   "dependencies": ["bluetooth"],
-  "documentation": "https://github.com/scobber/matson-assistant",
+  "documentation": "https://github.com/thing-net-au/matson-hacs",
   "iot_class": "local_polling",
   "requirements": ["bleak>=0.21.1"],
   "bluetooth": [
     {
       "local_name": "Matson*"
+    },
+    {
+      "local_name": "MATSON*"
     }
   ],
-  "version": "1.0.0"
+  "version": "1.0.1"
 }
